--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>AsaanAccounts | Professional Excel & Accounting Solutions</title>
+<title>AsaanAccounts | Excel & Accounting Solutions</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
 :root {
-  --black: #000;
-  --gray: #666;
-  --light-gray: #f5f5f5;
+  --black: #111;
+  --dark-gray: #1e1e1e;
+  --mid-gray: #3a3a3a;
+  --light-gray: #f2f2f2;
+  --text-gray: #bdbdbd;
 }
 
 * {
@@ -19,78 +21,96 @@
 body {
   margin: 0;
   font-family: "Inter", "Segoe UI", Arial, sans-serif;
-  color: var(--black);
-  background: #fff;
+  background: var(--black);
+  color: #fff;
   line-height: 1.7;
 }
 
 /* ---------- LAYOUT ---------- */
 .container {
-  max-width: 1100px;
+  max-width: 1200px;
   margin: auto;
-  padding: 0 20px;
+  padding: 0 24px;
 }
 
 section {
-  padding: 80px 0;
-  border-bottom: 1px solid #ddd;
+  padding: 100px 0;
 }
 
-/* ---------- HEADER ---------- */
-header {
-  padding: 100px 0 80px;
+/* ---------- HERO ---------- */
+.hero {
+  background: linear-gradient(180deg, #111 0%, #1e1e1e 100%);
 }
 
-header h1 {
-  font-size: 42px;
+.hero h1 {
+  font-size: 44px;
   margin-bottom: 20px;
-  letter-spacing: -0.5px;
+  letter-spacing: -0.6px;
 }
 
-header p {
-  max-width: 720px;
+.hero p {
+  max-width: 760px;
   font-size: 18px;
-  color: var(--gray);
+  color: var(--text-gray);
 }
 
-/* ---------- TITLES ---------- */
+/* ---------- SECTION TITLES ---------- */
 h2 {
-  font-size: 28px;
-  margin-bottom: 40px;
-  letter-spacing: -0.3px;
+  font-size: 30px;
+  margin-bottom: 50px;
+  letter-spacing: -0.4px;
+}
+
+/* ---------- LIGHT SECTIONS ---------- */
+.light {
+  background: var(--light-gray);
+  color: #000;
+}
+
+.light p {
+  color: #444;
+}
+
+/* ---------- GRID ---------- */
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 28px;
 }
 
 /* ---------- CARDS ---------- */
-.grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-  gap: 24px;
+.card {
+  background: #fff;
+  color: #000;
+  padding: 28px;
+  border-radius: 6px;
+  border: 1px solid #ddd;
 }
 
-.card {
-  border: 1px solid #000;
-  padding: 24px;
+.card.dark {
+  background: var(--mid-gray);
+  color: #fff;
+  border: 1px solid #555;
 }
 
 .card h3 {
   margin-top: 0;
-  margin-bottom: 12px;
+  margin-bottom: 14px;
   font-size: 18px;
 }
 
 .card p {
   margin: 0;
   font-size: 15px;
-  color: var(--gray);
 }
 
 /* ---------- BUTTON ---------- */
 .button {
   display: inline-block;
-  margin-top: 16px;
-  padding: 10px 18px;
-  border: 1px solid #000;
-  color: #000;
+  margin-top: 18px;
+  padding: 10px 20px;
+  border: 1px solid currentColor;
+  color: inherit;
   text-decoration: none;
   font-size: 14px;
 }
@@ -102,16 +122,19 @@ h2 {
 
 /* ---------- CONTACT ---------- */
 .contact-box {
-  border: 1px solid #000;
-  padding: 30px;
-  max-width: 600px;
+  max-width: 700px;
+  background: var(--dark-gray);
+  padding: 40px;
+  border-radius: 6px;
+  border: 1px solid #444;
 }
 
-/* ---------- FOOTER ---------- */
 footer {
-  padding: 30px 0;
+  background: #0d0d0d;
+  text-align: center;
+  padding: 30px 10px;
   font-size: 13px;
-  color: var(--gray);
+  color: #999;
 }
 </style>
 </head>
@@ -119,38 +142,38 @@ footer {
 <body>
 
 <!-- HERO -->
-<header>
+<section class="hero">
   <div class="container">
     <h1>AsaanAccounts</h1>
     <p>
-      Professional Excel and accounting support focused on accuracy, clarity, and
-      practical business reporting. I help individuals and organizations convert
-      unstructured financial data into reliable, decision-ready Excel files.
+      Professional Excel and accounting solutions focused on accuracy, structure,
+      and reliability. I help businesses, institutions, and individuals transform
+      complex and unorganized data into clear, decision-ready Excel reports.
     </p>
   </div>
-</header>
+</section>
 
 <!-- FREE SAMPLES -->
-<section>
+<section class="light">
   <div class="container">
     <h2>Free Excel Samples</h2>
 
     <div class="grid">
       <div class="card">
         <h3>Bank Reconciliation Template</h3>
-        <p>Structured reconciliation format suitable for monthly and annual closing.</p>
+        <p>Professional reconciliation format suitable for audit and monthly closing.</p>
         <a class="button" href="Bank-Reconciliation.xlsx">Download</a>
       </div>
 
       <div class="card">
         <h3>Expense Tracker</h3>
-        <p>Clean tracking of daily and monthly expenses with summary view.</p>
+        <p>Clear tracking of expenses with structured monthly summaries.</p>
         <a class="button" href="Expense-Tracker.xlsx">Download</a>
       </div>
 
       <div class="card">
         <h3>Fee Comparison Sheet</h3>
-        <p>Comparison analysis between old and revised fee structures.</p>
+        <p>Comparative analysis between old and revised fee structures.</p>
         <a class="button" href="Fee-Comparison.xlsx">Download</a>
       </div>
     </div>
@@ -163,38 +186,38 @@ footer {
     <h2>Professional Services</h2>
 
     <div class="grid">
-      <div class="card">
+      <div class="card dark">
         <h3>Excel Data Cleaning</h3>
         <p>Correction of errors, removal of duplicates, and structured formatting.</p>
       </div>
 
-      <div class="card">
+      <div class="card dark">
         <h3>Bank Reconciliation</h3>
         <p>Matching bank statements with ledgers and identifying discrepancies.</p>
       </div>
 
-      <div class="card">
+      <div class="card dark">
         <h3>Excel Reporting</h3>
         <p>Monthly, quarterly, and annual reports with accurate formulas.</p>
       </div>
 
-      <div class="card">
-        <h3>Custom Templates</h3>
-        <p>Tailor-made Excel files based on business or institutional needs.</p>
+      <div class="card dark">
+        <h3>Custom Excel Templates</h3>
+        <p>Tailor-made Excel files aligned with specific business needs.</p>
       </div>
     </div>
   </div>
 </section>
 
 <!-- CONTACT -->
-<section>
+<section class="light">
   <div class="container">
     <h2>Contact</h2>
 
     <div class="contact-box">
       <p>
-        For customized Excel work, accounting support, or professional reporting,
-        please contact me using the details below.
+        For customized Excel solutions, accounting support, or professional reporting,
+        please reach out using the details below.
       </p>
 
       <p>
@@ -207,9 +230,7 @@ footer {
 </section>
 
 <footer>
-  <div class="container">
-    © 2026 AsaanAccounts • Professional Excel & Accounting Services
-  </div>
+  © 2026 AsaanAccounts • Excel & Accounting Solutions
 </footer>
 
 </body>
