--- a/index.html
+++ b/index.html
@@ -7,134 +7,110 @@
 
 <style>
 :root {
-  --black: #111;
-  --dark-gray: #1e1e1e;
-  --mid-gray: #3a3a3a;
-  --light-gray: #f2f2f2;
-  --text-gray: #bdbdbd;
+  --black:#111;
+  --dark:#1e1e1e;
+  --mid:#3a3a3a;
+  --light:#f2f2f2;
+  --text:#bdbdbd;
 }
 
-* {
-  box-sizing: border-box;
+*{box-sizing:border-box}
+
+body{
+  margin:0;
+  font-family:"Inter","Segoe UI",Arial,sans-serif;
+  background:var(--black);
+  color:#fff;
+  line-height:1.7;
 }
 
-body {
-  margin: 0;
-  font-family: "Inter", "Segoe UI", Arial, sans-serif;
-  background: var(--black);
-  color: #fff;
-  line-height: 1.7;
+.container{
+  max-width:1200px;
+  margin:auto;
+  padding:0 24px;
 }
 
-/* ---------- LAYOUT ---------- */
-.container {
-  max-width: 1200px;
-  margin: auto;
-  padding: 0 24px;
+section{padding:100px 0}
+
+h1{font-size:44px;margin-bottom:20px}
+h2{font-size:30px;margin-bottom:50px}
+
+.hero{background:linear-gradient(180deg,#111,#1e1e1e)}
+
+.hero p{
+  max-width:760px;
+  font-size:18px;
+  color:var(--text);
 }
 
-section {
-  padding: 100px 0;
+.light{
+  background:var(--light);
+  color:#000;
 }
 
-/* ---------- HERO ---------- */
-.hero {
-  background: linear-gradient(180deg, #111 0%, #1e1e1e 100%);
+.light p{color:#444}
+
+.grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
+  gap:28px;
 }
 
-.hero h1 {
-  font-size: 44px;
-  margin-bottom: 20px;
-  letter-spacing: -0.6px;
+.card{
+  padding:28px;
+  border-radius:6px;
+  border:1px solid #ddd;
+  background:#fff;
+  color:#000;
 }
 
-.hero p {
-  max-width: 760px;
-  font-size: 18px;
-  color: var(--text-gray);
+.card.dark{
+  background:var(--mid);
+  color:#fff;
+  border:1px solid #555;
 }
 
-/* ---------- SECTION TITLES ---------- */
-h2 {
-  font-size: 30px;
-  margin-bottom: 50px;
-  letter-spacing: -0.4px;
+.card h3{
+  margin:14px 0 10px;
+  font-size:18px;
 }
 
-/* ---------- LIGHT SECTIONS ---------- */
-.light {
-  background: var(--light-gray);
-  color: #000;
+.card p{font-size:15px;margin:0}
+
+.icon{
+  width:36px;
+  height:36px;
+  stroke:currentColor;
+  stroke-width:1.6;
+  fill:none;
 }
 
-.light p {
-  color: #444;
+.button{
+  display:inline-block;
+  margin-top:18px;
+  padding:10px 20px;
+  border:1px solid currentColor;
+  color:inherit;
+  text-decoration:none;
+  font-size:14px;
 }
 
-/* ---------- GRID ---------- */
-.grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-  gap: 28px;
+.button:hover{background:#000;color:#fff}
+
+.contact-box{
+  max-width:700px;
+  background:var(--dark);
+  padding:40px;
+  border-radius:6px;
+  border:1px solid #444;
 }
 
-/* ---------- CARDS ---------- */
-.card {
-  background: #fff;
-  color: #000;
-  padding: 28px;
-  border-radius: 6px;
-  border: 1px solid #ddd;
-}
-
-.card.dark {
-  background: var(--mid-gray);
-  color: #fff;
-  border: 1px solid #555;
-}
-
-.card h3 {
-  margin-top: 0;
-  margin-bottom: 14px;
-  font-size: 18px;
-}
-
-.card p {
-  margin: 0;
-  font-size: 15px;
-}
-
-/* ---------- BUTTON ---------- */
-.button {
-  display: inline-block;
-  margin-top: 18px;
-  padding: 10px 20px;
-  border: 1px solid currentColor;
-  color: inherit;
-  text-decoration: none;
-  font-size: 14px;
-}
-
-.button:hover {
-  background: #000;
-  color: #fff;
-}
-
-/* ---------- CONTACT ---------- */
-.contact-box {
-  max-width: 700px;
-  background: var(--dark-gray);
-  padding: 40px;
-  border-radius: 6px;
-  border: 1px solid #444;
-}
-
-footer {
-  background: #0d0d0d;
-  text-align: center;
-  padding: 30px 10px;
-  font-size: 13px;
-  color: #999;
+footer{
+  background:#0d0d0d;
+  text-align:center;
+  padding:30px 10px;
+  font-size:13px;
+  color:#999;
 }
 </style>
 </head>
@@ -144,11 +120,16 @@ footer {
 <!-- HERO -->
 <section class="hero">
   <div class="container">
+    <!-- Hero Icon -->
+    <svg class="icon" viewBox="0 0 24 24">
+      <rect x="3" y="3" width="18" height="18" rx="2"/>
+      <path d="M7 9h10M7 13h10M7 17h6"/>
+    </svg>
+
     <h1>AsaanAccounts</h1>
     <p>
       Professional Excel and accounting solutions focused on accuracy, structure,
-      and reliability. I help businesses, institutions, and individuals transform
-      complex and unorganized data into clear, decision-ready Excel reports.
+      and reliability. Transforming complex data into decision-ready reports.
     </p>
   </div>
 </section>
@@ -160,20 +141,32 @@ footer {
 
     <div class="grid">
       <div class="card">
-        <h3>Bank Reconciliation Template</h3>
-        <p>Professional reconciliation format suitable for audit and monthly closing.</p>
+        <svg class="icon" viewBox="0 0 24 24">
+          <path d="M3 3h18v18H3z"/>
+          <path d="M8 8h8M8 12h8M8 16h5"/>
+        </svg>
+        <h3>Bank Reconciliation</h3>
+        <p>Audit-ready reconciliation format.</p>
         <a class="button" href="Bank-Reconciliation.xlsx">Download</a>
       </div>
 
       <div class="card">
+        <svg class="icon" viewBox="0 0 24 24">
+          <path d="M4 19V5"/>
+          <path d="M10 19V9"/>
+          <path d="M16 19V13"/>
+        </svg>
         <h3>Expense Tracker</h3>
-        <p>Clear tracking of expenses with structured monthly summaries.</p>
+        <p>Monthly expense control with summaries.</p>
         <a class="button" href="Expense-Tracker.xlsx">Download</a>
       </div>
 
       <div class="card">
-        <h3>Fee Comparison Sheet</h3>
-        <p>Comparative analysis between old and revised fee structures.</p>
+        <svg class="icon" viewBox="0 0 24 24">
+          <path d="M3 6h18M3 12h18M3 18h18"/>
+        </svg>
+        <h3>Fee Comparison</h3>
+        <p>Clear comparison of fee structures.</p>
         <a class="button" href="Fee-Comparison.xlsx">Download</a>
       </div>
     </div>
@@ -187,23 +180,35 @@ footer {
 
     <div class="grid">
       <div class="card dark">
+        <svg class="icon" viewBox="0 0 24 24">
+          <path d="M4 4h16v16H4z"/>
+        </svg>
         <h3>Excel Data Cleaning</h3>
-        <p>Correction of errors, removal of duplicates, and structured formatting.</p>
+        <p>Error correction, duplicate removal, clean formatting.</p>
       </div>
 
       <div class="card dark">
+        <svg class="icon" viewBox="0 0 24 24">
+          <path d="M12 2v20M2 12h20"/>
+        </svg>
         <h3>Bank Reconciliation</h3>
-        <p>Matching bank statements with ledgers and identifying discrepancies.</p>
+        <p>Ledger vs bank statement matching.</p>
       </div>
 
       <div class="card dark">
+        <svg class="icon" viewBox="0 0 24 24">
+          <path d="M4 20V4h16v16"/>
+        </svg>
         <h3>Excel Reporting</h3>
-        <p>Monthly, quarterly, and annual reports with accurate formulas.</p>
+        <p>Monthly and annual financial reports.</p>
       </div>
 
       <div class="card dark">
-        <h3>Custom Excel Templates</h3>
-        <p>Tailor-made Excel files aligned with specific business needs.</p>
+        <svg class="icon" viewBox="0 0 24 24">
+          <circle cx="12" cy="12" r="9"/>
+        </svg>
+        <h3>Custom Templates</h3>
+        <p>Business-specific Excel formats.</p>
       </div>
     </div>
   </div>
@@ -215,15 +220,11 @@ footer {
     <h2>Contact</h2>
 
     <div class="contact-box">
+      <p>For professional Excel and accounting support:</p>
       <p>
-        For customized Excel solutions, accounting support, or professional reporting,
-        please reach out using the details below.
-      </p>
-
-      <p>
-        <strong>Email:</strong> yourname@gmail.com<br>
-        <strong>WhatsApp:</strong> +92XXXXXXXXXX<br>
-        <strong>Freelance Profile:</strong> Fiverr / Upwork
+        📧 <strong>yourname@gmail.com</strong><br>
+        📱 <strong>+92XXXXXXXXXX</strong><br>
+        💼 <strong>Fiverr / Upwork</strong>
       </p>
     </div>
   </div>
